[gd_scene load_steps=10 format=2]

[ext_resource path="res://TargetStatDisplay.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.251613, 0.548387, 0.793548, 0.935484, 0.993548, 1 )
colors = PoolColorArray( 0.0980392, 0.290196, 0.117647, 1, 0.142302, 0.365968, 0.167161, 1, 0.188401, 0.444884, 0.21873, 1, 0.256632, 0.561686, 0.295056, 1, 0.329412, 0.686275, 0.376471, 1, 0.68924, 0.854615, 0.711047, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.792157, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.447059, 0.00784314, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.301961, 0.407843, 0.827451, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.00784314, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.278431, 0.270588, 0.14902, 1 )

[node name="TargetDisplayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.354675
margin_top = -0.943848
margin_right = -0.354736
margin_bottom = -0.943848
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -400.0
margin_right = -50.0
margin_bottom = -50.0
rect_min_size = Vector2( 450, 350 )
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSpacing" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing"]
margin_right = 450.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )

[node name="Main" type="HBoxContainer" parent="Background/VSpacing"]
margin_top = 7.0
margin_right = 450.0
margin_bottom = 343.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main"]
margin_right = 10.0
margin_bottom = 336.0
rect_min_size = Vector2( 10, 0 )

[node name="LeftSideStats" type="VBoxContainer" parent="Background/VSpacing/Main"]
margin_left = 10.0
margin_right = 220.0
margin_bottom = 336.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats"]
margin_right = 210.0
margin_bottom = 285.0
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer"]
margin_right = 210.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="StatusBars" type="HBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer"]
margin_top = 35.0
margin_right = 210.0
margin_bottom = 85.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars"]
margin_left = 25.0
margin_right = 81.0
margin_bottom = 50.0

[node name="HP" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer"]
margin_right = 56.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "HP 0 / 0"
align = 2

[node name="MP" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer"]
margin_top = 18.0
margin_right = 56.0
margin_bottom = 32.0
text = "MP 0 / 0"
align = 2

[node name="EXP" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer"]
margin_top = 36.0
margin_right = 56.0
margin_bottom = 50.0
text = "EXP 0 / 0"
align = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars"]
margin_left = 85.0
margin_right = 185.0
margin_bottom = 50.0

[node name="HP Bar" type="ProgressBar" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 14 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 20.0
value = 10.0
percent_visible = false

[node name="MP Bar" type="ProgressBar" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer2"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
rect_min_size = Vector2( 100, 14 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 10.0
value = 5.0
percent_visible = false

[node name="EXP Bar" type="ProgressBar" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatusBars/VBoxContainer2"]
modulate = Color( 1, 0.890196, 0, 1 )
margin_top = 36.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 14 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false

[node name="MarginContainer4" type="MarginContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer"]
margin_top = 85.0
margin_right = 210.0
margin_bottom = 135.0
rect_min_size = Vector2( 10, 50 )

[node name="StatsWindow2" type="Panel" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer"]
margin_top = 135.0
margin_right = 210.0
margin_bottom = 285.0
rect_min_size = Vector2( 210, 150 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer"]
margin_right = 210.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer"]
margin_top = 14.0
margin_right = 210.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 41.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 67.0
margin_bottom = 41.0
custom_constants/separation = 13

[node name="AttackLabel" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 53.0
margin_bottom = 14.0
text = "Attack"
align = 2

[node name="DefenseLabel" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 27.0
margin_right = 53.0
margin_bottom = 41.0
text = "Defense"
align = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 87.0
margin_bottom = 41.0
custom_constants/separation = 13

[node name="AttackLabel" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 16.0
margin_bottom = 14.0
text = "10"

[node name="DefenseLabel" type="Label" parent="Background/VSpacing/Main/LeftSideStats/VBoxContainer/StatsWindow2/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 27.0
margin_right = 16.0
margin_bottom = 41.0
text = "10"

[node name="MarginContainer3" type="MarginContainer" parent="Background/VSpacing/Main"]
margin_left = 220.0
margin_right = 230.0
margin_bottom = 336.0
rect_min_size = Vector2( 10, 0 )

[node name="RightSideStats" type="VBoxContainer" parent="Background/VSpacing/Main"]
margin_left = 230.0
margin_right = 440.0
margin_bottom = 336.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 5

[node name="CharacterPortraitSpace" type="MarginContainer" parent="Background/VSpacing/Main/RightSideStats"]
margin_right = 210.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )

[node name="StatsWindow" type="Panel" parent="Background/VSpacing/Main/RightSideStats"]
margin_top = 135.0
margin_right = 210.0
margin_bottom = 336.0
rect_min_size = Vector2( 210, 150 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer"]
margin_right = 210.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer"]
margin_top = 14.0
margin_right = 210.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 68.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 53.0
margin_bottom = 68.0
custom_constants/separation = 13

[node name="Move" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 39.0
margin_bottom = 14.0
text = "Move"
align = 2

[node name="Spd" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 27.0
margin_right = 39.0
margin_bottom = 41.0
text = "Speed"
align = 2

[node name="Range" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 39.0
margin_bottom = 68.0
text = "Range"
align = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 73.0
margin_bottom = 68.0
custom_constants/separation = 13

[node name="Move Stat" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 16.0
margin_bottom = 14.0
text = "10"

[node name="Speed Stat" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 27.0
margin_right = 16.0
margin_bottom = 41.0
text = "10"

[node name="Range Stat" type="Label" parent="Background/VSpacing/Main/RightSideStats/StatsWindow/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 54.0
margin_right = 16.0
margin_bottom = 68.0
text = "10"

[node name="MarginContainer2" type="MarginContainer" parent="Background/VSpacing/Main"]
margin_left = 440.0
margin_right = 450.0
margin_bottom = 336.0
rect_min_size = Vector2( 10, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="Background/VSpacing"]
margin_top = 343.0
margin_right = 450.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 7 )
